# wispy-compile

./: .gitignore  Cargo.toml  README.md
bench/: fib.lua  fib.py  fib.scm  nqueens.lua  nqueens.py  nqueens.scm  nqueens2.scm
docs/: futamura-p3.md  one-piece.md  paths.md  proposal-zclaw.md  r7rs-small-plan.md  table_design.md
examples/: eliza.scm  futamura-cps.scm  futamura.scm  pe.scm  reflective-tower.scm  rsc.scm
reference/: Basic.lean  CatKripkeWallMinimal.lean  ICP.lean  NoCommutativity.lean  psi_fibonacci.lisp  psi_lisp.py  psi_metacircular.lisp  psi_nqueens.lisp  psi_runtime.h  psi_supercompile.py  psi_transpile.py
src/: cayley_64.rs  compile.rs  compile_lua.rs  cps.rs  eval.rs  heap.rs  lib.rs  macros.rs  reader.rs  symbol.rs  table.py  table.rs  table_build.py
src/kamea-scheme/: Cargo.toml
src/kamea-scheme/src/: heap.rs  lib.rs  table.rs  value.rs
tools/: table_search_v1.py
v2/kamea-scheme/: Cargo.toml
v2/kamea-scheme/src/: compile.rs  eval.rs  heap.rs  lib.rs  symbol.rs  table.rs  val.rs
v2/src/: cayley_32.rs
v2/wispy-scheme/src/: compile.rs  cps.rs  eval.rs  lib.rs
