[package]
name = "wispy-scheme"
version = "0.1.0"
edition = "2021"
description = "Scheme → Rust AOT compiler with Cayley table type dispatch."
license = "MIT"
repository = "https://github.com/stefanopalmieri/WispyScheme"

[dependencies]
wispy-table = { path = "../wispy-table" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
